objects/Realtor__c.object
<CustomObject>
    <fields>
        <fullName>Brokerage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brokerage</label>
        <referenceTo>Brokerage__c</referenceTo>
        <relationshipLabel>Realtor</relationshipLabel>
        <relationshipName>Realtor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Realtor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Realtor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Realtor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>